# python-interview

./: README.md  pyproject.toml
src/elements/: abstact.py  callable.py  class_decorators.py  encapsulation.py  inheritance.py  metaclass.py  singleton.py
src/elements/types/: generics.py  new_type.py  protocols.py  type_alias.py  types.md
src/problems/: longest_palindrome.py  max_stock_diff.py  recursion_issue.py  reverse.py
